--- a/ezoneproject/index.html
+++ b/ezoneproject/index.html
@@ -5,10 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <link rel="stylesheet" href="style.scss" />
+    <!-- <link rel="stylesheet" href="style.scss" /> -->
   </head>
   <body>
-    <div id="app"></div>
+    <div class="h1wrapper">
+      <h1>ELEVATING SOMETHING</h1>
+      <h1 class="h1">FOR SOME REASON</h1>
+      <p>An independent collective of performance experts helping you to push your boundaries and challenge your limits. It's time to get in the zone.</p>
+    </div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
