--- a/ezoneproject/index.html
+++ b/ezoneproject/index.html
@@ -51,12 +51,33 @@
         </svg></div>
     </nav>
   </header>
-  <div class="h1wrapper">
-    <h1>ELEVATING SOMETHING</h1>
-    <h1 class="h1">FOR SOME REASON</h1>
-    <p>An independent collective of performance experts helping you to push your boundaries and challenge your limits.
-      It's time to get in the zone.</p>
-  </div>
+  <main>
+    <div class="h1wrapper">
+      <h1>ELEVATING SOMETHING</h1>
+      <h1 class="h1">FOR SOME REASON</h1>
+      <p>An independent collective of performance experts helping you to push your boundaries and challenge your limits.
+        It's time to get in the zone.</p>
+    </div>
+  </main>
+  <footer>
+    <div class="footer-links">
+      <a href="">ABOUT</a>
+      <a href="">EXPERTS</a>
+      <a href="">CONTACT</a>
+    </div>
+    <div class="footer-extra-info">
+      <a href="">Terms and conditions</a><a href="">Parent company: AceZone</a>
+    </div>
+    <div><a href=""></a>
+      <a href=""><img src="/ezoneproject/assets/tiktok.svg" alt=""></a>
+      <a href=""></a>
+      <a href="">
+      </a><a href=""></a>
+    </div>
+
+
+
+  </footer>
   <div id="app"></div>
   <script type="module" src="/main.js"></script>
 </body>
