--- a/ezoneproject/index.html
+++ b/ezoneproject/index.html
@@ -7,14 +7,6 @@
     <title>Ezone</title>
   </head>
 
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="noindex" />
-    <title>Vite App</title>
-  </head>
-
   <body>
     <header>
       <nav>
@@ -76,10 +68,40 @@
     </header>
     <main>
       <div class="h1wrapper">
-        <h1>ELEVATING SOMETHING</h1>
-        <h1 class="h1">FOR SOME REASON</h1>
+        <h1>ELEVATING PERFORMANCE</h1>
+        <h1 class="h1">IN ESPORTS ATHLETES</h1>
         <p>An independent collective of performance experts helping you to push your boundaries and challenge your limits. It's time to get in the zone.</p>
       </div>
+      <section id="signup">
+        <h2>HOW DO YOU WANT TO IMPROVE?</h2>
+        <div id="carousel">
+          <div class="area area1">
+            <h2 class="areaheader">Mindset</h2>
+            <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset for perfomance.</p>
+            <div class="center"><button>+ SIGN UP</button></div>
+          </div>
+          <div class="area area2">
+            <h2 class="areaheader">Health</h2>
+            <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset for performance.</p>
+            <div class="center"><button>+ SIGN UP</button></div>
+          </div>
+          <div class="area area3">
+            <h2 class="areaheader">Mindset</h2>
+            <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset</p>
+            <div class="center"><button>+ SIGN UP</button></div>
+          </div>
+          <div class="area area4">
+            <h2 class="areaheader">Mindset</h2>
+            <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset</p>
+            <div class="center"><button>+ SIGN UP</button></div>
+          </div>
+          <div class="area area5">
+            <h2 class="areaheader">Mindset</h2>
+            <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset</p>
+            <div class="center"><button>+ SIGN UP</button></div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
       <div class="footer-links">
