--- a/ezoneproject/index.html
+++ b/ezoneproject/index.html
@@ -58,6 +58,20 @@
       <p>An independent collective of performance experts helping you to push your boundaries and challenge your limits.
         It's time to get in the zone.</p>
     </div>
+    <section>
+      <div class="img-container"><img src="assets/puzzle.jpg" alt=""></div>
+      <div class="img-container"><img src="assets/moon.jpg" alt=""></div>
+      <div class="img-container"><img src="assets/brain.jpg" alt=""></div>
+      <div class="img-container"><img src="assets/blonde.jpg" alt=""></div>
+      <div class="img-container"><img src="assets/fast-space.jpg" alt=""></div>
+      <div class="img-container"><img src="assets/hand.jpg" alt=""></div>
+      <div class="img-container"><img src="assets/eye.jpg" alt=""></div>
+      <div class="img-container"><img src="assets/peekaboo.jpg" alt=""></div>
+      <div class="img-container"><img src="assets/pencil.jpg" alt=""></div>
+      <div class="img-container"><img src="assets/robot-eye.jpg" alt=""></div>
+      <div class="img-container"><img src="assets/eyeball-profile.jpg" alt=""></div>
+      <div class="img-container"><img src="assets/sad-dark-guy.jpg" alt=""></div>
+    </section>
   </main>
   <footer>
     <div class="footer-links">
@@ -69,14 +83,13 @@
       <a href="">Terms and conditions</a><a href="">Parent company: AceZone</a>
     </div>
     <div><a href=""></a>
-      <a href=""><img src="/ezoneproject/assets/tiktok.svg" alt=""></a>
+      <a href=""><img src="" alt=""></a>
       <a href=""></a>
-      <a href="">
-      </a><a href=""></a>
+      <a href=""></a>
+      <a href=""></a>
     </div>
-
-
-
+    <div class="tiktok">
+    </div>
   </footer>
   <div id="app"></div>
   <script type="module" src="/main.js"></script>
