--- a/ezoneproject/index.html
+++ b/ezoneproject/index.html
@@ -92,20 +92,53 @@
         </div>
       </div>
     </section>
+    <div class="popup">
+      <h2 class="popup-header">You have selected <span>3</span> newsletters</h2>
+      <form>
+        <label for="email">Enter your email adress:</label>
+        <div class="email-2"><input type="email" required />
+          <input type="submit" value="SIGN UP">
+        </div>
+      </form>
+    </div>
 
     <article>
-      <div class="img-container"><img src="assets/puzzle.jpg" alt=""></div>
-      <div class="img-container"><img src="assets/moon.jpg" alt=""></div>
-      <div class="img-container"><img src="assets/brain.jpg" alt=""></div>
-      <div class="img-container"><img src="assets/blonde.jpg" alt=""></div>
-      <div class="img-container"><img src="assets/fast-space.jpg" alt=""></div>
-      <div class="img-container"><img src="assets/hand.jpg" alt=""></div>
-      <div class="img-container"><img src="assets/eye.jpg" alt=""></div>
-      <div class="img-container"><img src="assets/peekaboo.jpg" alt=""></div>
-      <div class="img-container"><img src="assets/pencil.jpg" alt=""></div>
-      <div class="img-container"><img src="assets/robot-eye.jpg" alt=""></div>
-      <div class="img-container"><img src="assets/eyeball-profile.jpg" alt=""></div>
-      <div class="img-container"><img src="assets/sad-dark-guy.jpg" alt=""></div>
+      <div class="img-container">
+        <div class="img-button"><button>SLEEP</button></div><img src="assets/puzzle.jpg" alt="">
+      </div>
+      <div class="img-container">
+        <div class="img-button"><button>SLEEP</button></div><img src="assets/moon.jpg" alt="">
+      </div>
+      <div class="img-container">
+        <div class="img-button"><button>SLEEP</button></div><img src="assets/brain.jpg" alt="">
+      </div>
+      <div class="img-container">
+        <div class="img-button"><button>SLEEP</button></div><img src="assets/blonde.jpg" alt="">
+      </div>
+      <div class="img-container">
+        <div class="img-button"><button>SLEEP</button></div><img src="assets/fast-space.jpg" alt="">
+      </div>
+      <div class="img-container">
+        <div class="img-button"><button>SLEEP</button></div><img src="assets/hand.jpg" alt="">
+      </div>
+      <div class="img-container">
+        <div class="img-button"><button>SLEEP</button></div><img src="assets/eye.jpg" alt="">
+      </div>
+      <div class="img-container">
+        <div class="img-button"><button>SLEEP</button></div><img src="assets/peekaboo.jpg" alt="">
+      </div>
+      <div class="img-container">
+        <div class="img-button"><button>SLEEP</button></div><img src="assets/pencil.jpg" alt="">
+      </div>
+      <div class="img-container">
+        <div class="img-button"><button>SLEEP</button></div><img src="assets/robot-eye.jpg" alt="">
+      </div>
+      <div class="img-container">
+        <div class="img-button"><button>SLEEP</button></div><img src="assets/eyeball-profile.jpg" alt="">
+      </div>
+      <div class="img-container">
+        <div class="img-button"><button>SLEEP</button></div><img src="assets/sad-dark-guy.jpg" alt="">
+      </div>
     </article>
   </main>
   <footer>
