email not submitting

--- a/ezoneproject/index.html
+++ b/ezoneproject/index.html
@@ -67,37 +67,39 @@
           <h2 class="areaheader">Mindset</h2>
           <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset for perfomance.
           </p>
-          <div class="center"><button>+ SIGN UP</button></div>
+          <div class="center"><button class="btn-signup" value="1">+ SIGN UP</button></div>
         </div>
         <div class="area area2">
           <h2 class="areaheader">Health</h2>
           <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset for performance.
           </p>
-          <div class="center"><button>+ SIGN UP</button></div>
+          <div class="center"><button class="btn-signup" value="2">+ SIGN UP</button></div>
         </div>
         <div class="area area3">
           <h2 class="areaheader">Mindset</h2>
           <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset</p>
-          <div class="center"><button>+ SIGN UP</button></div>
+          <div class="center"><button class="btn-signup" value="3">+ SIGN UP</button></div>
         </div>
         <div class="area area4">
           <h2 class="areaheader">Mindset</h2>
           <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset</p>
-          <div class="center"><button>+ SIGN UP</button></div>
+          <div class="center"><button class="btn-signup" value="5">+ SIGN UP</button></div>
         </div>
         <div class="area area5">
           <h2 class="areaheader">Mindset</h2>
           <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset</p>
-          <div class="center"><button>+ SIGN UP</button></div>
+          <div class="center"><button class="btn-signup" value="5">+ SIGN UP</button></div>
         </div>
       </div>
     </section>
     <div class="popup">
-      <h2 class="popup-header">You have selected <span>3</span> newsletters</h2>
-      <form>
+      <h2 class="popup-header">You have selected <span class="nl-count">3</span> newsletters</h2>
+      <form class="nl-form">
         <label for="email">Enter your email adress:</label>
-        <div class="email-2"><input type="email" required />
+        <div class="email-2">
+          <input type="email" required />
           <input type="submit" value="SIGN UP">
+          <p class="hidden">Your email has been submitted!</p>
         </div>
       </form>
     </div>
