email can be submitted

--- a/ezoneproject/index.html
+++ b/ezoneproject/index.html
@@ -97,7 +97,7 @@
       <form class="nl-form">
         <label for="email">Enter your email adress:</label>
         <div class="email-2">
-          <input type="email" required />
+          <input type="email" name="email" required />
           <input type="submit" value="SIGN UP">
           <p class="hidden">Your email has been submitted!</p>
         </div>
