--- a/ezoneproject/index.html
+++ b/ezoneproject/index.html
@@ -97,9 +97,10 @@
       <form class="nl-form">
         <label for="email">Enter your email adress:</label>
         <div class="email-2">
+          <p class="error hidden">A valid e-mail can contain only letters, numbers, '@' and '.'</p>
           <input type="email" name="email" required />
           <input type="submit" value="SIGN UP">
-          <p class="hidden">Your email has been submitted!</p>
+          <p class="yay hidden">Your email has been submitted!</p>
         </div>
       </form>
     </div>
