--- a/ezoneproject/index.html
+++ b/ezoneproject/index.html
@@ -76,28 +76,28 @@
         <h2>HOW DO YOU WANT TO IMPROVE?</h2>
         <div id="carousel">
           <div class="area area1">
-            <h2 class="areaheader">Mindset</h2>
+            <h2 class="areaheader">MINDSET</h2>
             <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset for perfomance.</p>
             <div class="center"><button class="btn-signup" value="1">+ SIGN UP</button></div>
           </div>
           <div class="area area2">
             <h2 class="areaheader">Health</h2>
-            <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset for performance.</p>
+            <p class="areadescription">Make sure you are following the best practices to keep you mind and body fresh.</p>
             <div class="center"><button class="btn-signup" value="2">+ SIGN UP</button></div>
           </div>
           <div class="area area3">
-            <h2 class="areaheader">Mindset</h2>
-            <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset</p>
+            <h2 class="areaheader">INJURIES</h2>
+            <p class="areadescription">Stay up to date on the latest news concerning injuries and recovery.</p>
             <div class="center"><button class="btn-signup" value="3">+ SIGN UP</button></div>
           </div>
           <div class="area area4">
-            <h2 class="areaheader">Mindset</h2>
-            <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset</p>
+            <h2 class="areaheader">Reaction</h2>
+            <p class="areadescription">Learn new ways to improve your reaction time and hand/eye coordination.</p>
             <div class="center"><button class="btn-signup" value="5">+ SIGN UP</button></div>
           </div>
           <div class="area area5">
-            <h2 class="areaheader">Mindset</h2>
-            <p class="areadescription">Keep up with the latest research to achieve the ultimate mindset</p>
+            <h2 class="areaheader">Tactical</h2>
+            <p class="areadescription">Do you want to dive into strategy, leadership, and communication techniques?</p>
             <div class="center"><button class="btn-signup" value="5">+ SIGN UP</button></div>
           </div>
         </div>
@@ -117,7 +117,7 @@
 
       <article>
         <div class="img-container">
-          <div class="img-button"><button>SLEEP</button></div>
+          <div class="img-button"><button>PHYSIOLOGY</button></div>
           <img src="assets/puzzle.jpg" alt="" />
         </div>
         <div class="img-container">
@@ -125,15 +125,15 @@
           <img src="assets/moon.jpg" alt="" />
         </div>
         <div class="img-container">
-          <div class="img-button"><button>SLEEP</button></div>
+          <div class="img-button"><button>MINDSET</button></div>
           <img src="assets/brain.jpg" alt="" />
         </div>
         <div class="img-container">
-          <div class="img-button"><button>SLEEP</button></div>
+          <div class="img-button"><button>INJURIES</button></div>
           <img src="assets/blonde.jpg" alt="" />
         </div>
         <div class="img-container">
-          <div class="img-button"><button>SLEEP</button></div>
+          <div class="img-button"><button>VISION</button></div>
           <img src="assets/fast-space.jpg" alt="" />
         </div>
         <div class="img-container">
@@ -141,19 +141,19 @@
           <img src="assets/hand.jpg" alt="" />
         </div>
         <div class="img-container">
-          <div class="img-button"><button>SLEEP</button></div>
+          <div class="img-button"><button>MINDSET</button></div>
           <img src="assets/eye.jpg" alt="" />
         </div>
         <div class="img-container">
-          <div class="img-button"><button>SLEEP</button></div>
+          <div class="img-button"><button>INJURIES</button></div>
           <img src="assets/peekaboo.jpg" alt="" />
         </div>
         <div class="img-container">
-          <div class="img-button"><button>SLEEP</button></div>
+          <div class="img-button"><button>HEARING</button></div>
           <img src="assets/pencil.jpg" alt="" />
         </div>
         <div class="img-container">
-          <div class="img-button"><button>SLEEP</button></div>
+          <div class="img-button"><button>NUTRITION</button></div>
           <img src="assets/robot-eye.jpg" alt="" />
         </div>
         <div class="img-container">
@@ -161,7 +161,7 @@
           <img src="assets/eyeball-profile.jpg" alt="" />
         </div>
         <div class="img-container">
-          <div class="img-button"><button>SLEEP</button></div>
+          <div class="img-button"><button>STRESS</button></div>
           <img src="assets/sad-dark-guy.jpg" alt="" />
         </div>
       </article>
