article headers filled in

--- a/ezoneproject/index.html
+++ b/ezoneproject/index.html
@@ -108,50 +108,62 @@
 
     <article>
       <div class="img-container">
+        <h2>The Cognitive Skills of Esports Athletes</h2>
         <div class="img-button"><button>PHYSIOLOGY</button></div>
         <img src="assets/puzzle.jpg" alt="" />
       </div>
       <div class="img-container">
+        <h2>How Sleep Affects Our Memory And Cognitive Abilities </h2>
         <div class="img-button"><button>SLEEP</button></div>
         <img src="assets/moon.jpg" alt="" />
       </div>
       <div class="img-container">
+        <h2>Ready To Compete Achieving The Ultimate Esports Mind</h2>
         <div class="img-button"><button>MINDSET</button></div>
         <img src="assets/brain.jpg" alt="" />
       </div>
       <div class="img-container">
+        <h2>How To 'Get In The Zone': achieving flow state in gaming</h2>
         <div class="img-button"><button>INJURIES</button></div>
         <img src="assets/blonde.jpg" alt="" />
       </div>
       <div class="img-container">
+        <h2>'Flow state' explained</h2>
         <div class="img-button"><button>VISION</button></div>
         <img src="assets/fast-space.jpg" alt="" />
       </div>
       <div class="img-container">
+        <h2>Why does my hand hurt?</h2>
         <div class="img-button"><button>SLEEP</button></div>
         <img src="assets/hand.jpg" alt="" />
       </div>
       <div class="img-container">
+        <h2>training the eye for improved visual cues in-game</h2>
         <div class="img-button"><button>MINDSET</button></div>
         <img src="assets/eye.jpg" alt="" />
       </div>
       <div class="img-container">
+        <h2>Relaxing eye exercise: how to avoid eye strain & fatigue</h2>
         <div class="img-button"><button>INJURIES</button></div>
         <img src="assets/peekaboo.jpg" alt="" />
       </div>
       <div class="img-container">
+        <h2>Training exercise for the eye</h2>
         <div class="img-button"><button>HEARING</button></div>
         <img src="assets/pencil.jpg" alt="" />
       </div>
       <div class="img-container">
+        <h2>The importance of visioin in esports</h2>
         <div class="img-button"><button>NUTRITION</button></div>
         <img src="assets/robot-eye.jpg" alt="" />
       </div>
       <div class="img-container">
+        <h2>How the eye works: muscles & movement</h2>
         <div class="img-button"><button>SLEEP</button></div>
         <img src="assets/eyeball-profile.jpg" alt="" />
       </div>
       <div class="img-container">
+        <h2>The effect if burnout & stress on esports athletes</h2>
         <div class="img-button"><button>STRESS</button></div>
         <img src="assets/sad-dark-guy.jpg" alt="" />
       </div>
